tests/good/typing/038-higher-order-app-type.clap
type apply <f, x> = f <x>
