tests/bad/lexical/002-identity-type.clap
type id <t> = id t

